# photo_to_excel

./: .gitignore  CHANGELOG.md  README.html  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  python-publish.yml
code/: photo_to_excel.py
tests/: test.py
tests/test_photos/: baby Julia.xlsx  bush_shoeing_incident.xlsx  neverforget.xlsx
